cmake_minimum_required(VERSION 3.13)

include_directories(BEFORE .)

add_library(homestore_tests_pg OBJECT)
target_sources(homestore_tests_pg PRIVATE test_homestore_backend.cpp hs_pg_tests.cpp)
target_link_libraries(homestore_tests_pg homeobject_homestore ${COMMON_TEST_DEPS})

add_library(homestore_tests_shard OBJECT)
target_sources(homestore_tests_shard PRIVATE test_homestore_backend.cpp hs_shard_tests.cpp)
target_link_libraries(homestore_tests_shard homeobject_homestore ${COMMON_TEST_DEPS})

add_library(homestore_tests_blob OBJECT)
target_sources(homestore_tests_blob PRIVATE test_homestore_backend.cpp hs_blob_tests.cpp)
target_link_libraries(homestore_tests_blob homeobject_homestore ${COMMON_TEST_DEPS})

add_library(homestore_tests_misc OBJECT)
target_sources(homestore_tests_misc PRIVATE test_homestore_backend.cpp homeobj_misc_tests.cpp)
target_link_libraries(homestore_tests_misc homeobject_homestore ${COMMON_TEST_DEPS})

add_library(homestore_tests_dynamic OBJECT)
target_sources(homestore_tests_dynamic PRIVATE test_homestore_backend_dynamic.cpp)
target_link_libraries(homestore_tests_dynamic homeobject_homestore ${COMMON_TEST_DEPS})

add_executable(test_heap_chunk_selector)
target_sources(test_heap_chunk_selector PRIVATE test_heap_chunk_selector.cpp ../heap_chunk_selector.cpp)
target_link_libraries(test_heap_chunk_selector homestore::homestore ${COMMON_TEST_DEPS})
add_test(NAME HeapChunkSelectorTest COMMAND test_heap_chunk_selector)

add_library(homestore_tests_gc OBJECT)
target_sources(homestore_tests_gc PRIVATE test_homestore_backend.cpp hs_gc_tests.cpp)
target_link_libraries(homestore_tests_gc homeobject_homestore ${COMMON_TEST_DEPS})
